--- a/Client/app/src/main/res/layout/activity_call.xml
+++ b/Client/app/src/main/res/layout/activity_call.xml
@@ -1,52 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CallActivity">
-    <LinearLayout
+
+    <WebView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="match_parent"/>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ccc">
 
-            <org.webrtc.SurfaceViewRenderer
-                android:id="@+id/surface_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+        <TextView
+            android:id="@+id/txtCalling"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:text="Someong is Calling"
+            android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="From camera"
-                android:layout_gravity="top|end"
-                android:textColor="#fff"
-                android:layout_margin="16dp"
-                android:layout_height="wrap_content" />
-        </FrameLayout>
+        <ImageView
+            android:id="@+id/btnAccept"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/call" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+        <ImageView
+            android:id="@+id/btnReject"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/call" />
 
-            <org.webrtc.SurfaceViewRenderer
-                android:id="@+id/surface_view2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+    </RelativeLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="From PeerConection"
-                android:layout_gravity="top|end"
-                android:textColor="#fff"
-                android:layout_margin="16dp"
-                android:layout_height="wrap_content" />
-        </FrameLayout>
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
