--- a/Client/app/src/main/res/values/themes.xml
+++ b/Client/app/src/main/res/values/themes.xml
@@ -19,9 +19,8 @@
 
     <style name="AppToolbar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
