--- a/Client/app/src/main/res/layout/activity_call.xml
+++ b/Client/app/src/main/res/layout/activity_call.xml
@@ -37,7 +37,7 @@
             android:layout_weight="1">
 
             <org.webrtc.SurfaceViewRenderer
-                android:id="@+id/remote_surface_view"
+                android:id="@+id/remoteView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
