--- a/Client/app/src/main/res/values/colors.xml
+++ b/Client/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="blue">#00BCD4</color>
     <color name="purple">#673AB7</color>
     <color name="red">#E91E63</color>
+    <color name="darkgrey">#393737</color>
 </resources>
